# nummet

./: .gitignore  .travis.yml  README.md  bivar-interpol-in  numanal.cabal  slae-gauss-in0  slae-gauss-in2  slae-gauss-in3  slae-gauss-in4  travis_long
data/: bivar-interpol-in  bivar-interpol-in2  bode-in  eigen-in  heat-in  rect-integral-in  rect-integral-in0  rect-integral-in1  rect-integral-in2  rect-integral-in3  slnae-picard-in  snlae-picard-in  snlae-picard-in2  sode-in
lib/: BivarInterpolNewton.hs  BodeShooting.hs  EigenPower.hs  Function.hs  HeatExplicit.hs  Library.hs  Parser.hs  RectIntegral.hs  SlaeGauss.hs  SnlaePicard.hs  SodeRungeKutta.hs  Stringify.hs
src/: Main.hs  Stringify.hs
tests/: BivarInterpolNewtonSpec.hs  BodeShootingSpec.hs  EigenPowerSpec.hs  FunctionSpec.hs  HeatExplicitSpec.hs  LibrarySpec.hs  ParserSpec.hs  RectIntegralSpec.hs  SlaeGaussSpec.hs  SnlaePicardSpec.hs  SodeRungeKuttaSpec.hs  Spec.hs  StringifySpec.hs  TestLib.hs
