name:                numanal
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/numanal#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable numanal
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scientific
                     , numbers
                     , vector
                     , matrices
                     , trifecta
  other-modules:       SlaeGauss
                     , Parser
                     , Stringify

test-suite numanal-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      tests
                     , src
  build-depends:       base
                     , hspec
                     , scientific
                     , numbers
                     , vector
                     , matrices
                     , trifecta
