name:                numanal
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/hrsrashid/nummet#readme
license:             BSD3
license-file:        LICENSE
author:              Rashid Khuramshin
maintainer:          hrs.rashid@gmail.com
copyright:           2016 Rashid Khuramshin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable numanal
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , numanal

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     SlaeGauss
                     , BivarInterpolNewton
                     , Library
                     , Parser
                     , Stringify
                     , SnlaePicard
  build-depends:       base
                     , scientific
                     , numbers
                     , vector
                     , matrices
                     , trifecta

test-suite numanal-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       TestLib
                     , ParserSpec
                     , StringifySpec
                     , SlaeGaussSpec
                     , SnlaePicardSpec
                     , BivarInterpolNewtonSpec
  hs-source-dirs:      tests
  build-depends:       base
                     , numanal
                     , hspec
                     , numbers
                     , vector
                     , matrices
                     , trifecta
